--- a/templates/config-wb-mio.json.jinja
+++ b/templates/config-wb-mio.json.jinja
@@ -157,6 +157,17 @@
                 "group": "hw_info"
             },
             {
+                "id": "hw_batch_number",
+                "name": "HW Batch Number",
+                "type": "text",
+                "reg_type": "input",
+                "address": 304,
+                "format": "string",
+                "string_data_size": 16,
+                "enabled": false,
+                "group": "hw_info"
+            },
+            {
                 "id": "fw_version",
                 "name": "FW Version",
                 "reg_type": "input",
@@ -221,6 +232,7 @@
                 "Baud Rate": "Скорость обмена",
                 "baud_rate_description": "Перед изменением параметра убедитесь, что связь с устройством установлена. Выберите нужную скорость обмена, сохраните конфигурацию, а затем укажите в настройках порта эту же скорость.",
                 "Serial": "Серийный номер",
+                "HW Batch Number": "Номер партии",
                 "FW Version": "Версия прошивки",
                 "Uptime": "Время работы с момента включения",
                 "MCU Temperature": "Температура МК",
