--- a/templates/config-wb-mwac2_ver2.json.jinja
+++ b/templates/config-wb-mwac2_ver2.json.jinja
@@ -697,6 +697,16 @@
                 "group": "hw_info"
             },
             {
+                "name": "HW Batch Number",
+                "type": "text",
+                "reg_type": "input",
+                "address": 304,
+                "format": "string",
+                "string_data_size": 16,
+                "enabled": false,
+                "group": "hw_info"
+            },
+            {
                 "name": "FW Version",
                 "reg_type": "input",
                 "address": 250,
@@ -857,6 +867,7 @@
                 "Leakage Mode Reset": "Сброс режима \"Протечка\"",
 
                 "Serial": "Серийный номер",
+                "HW Batch Number": "Номер партии",
                 "FW Version": "Версия прошивки",
                 "Input Voltage": "Напряжение питания",
                 "Uptime": "Время работы",
