--- a/templates/config-wb-mao4-20ma.json.jinja
+++ b/templates/config-wb-mao4-20ma.json.jinja
@@ -631,6 +631,17 @@
                 "group": "hw_info"
             },
             {
+                "id": "hw_batch_number",
+                "name": "HW Batch Number",
+                "type": "text",
+                "reg_type": "input",
+                "address": 304,
+                "format": "string",
+                "string_data_size": 16,
+                "enabled": false,
+                "group": "hw_info"
+            },
+            {
                 "id": "fw_version",
                 "name": "FW Version",
                 "reg_type": "input",
@@ -795,6 +806,7 @@
                 "Set Previous State": "Установить предыдущее состояние",
 
                 "Serial": "Серийный номер",
+                "HW Batch Number": "Номер партии",
                 "FW Version": "Версия прошивки",
                 "Supply voltage": "Напряжение питания",
                 "Uptime": "Время работы с момента включения",
