--- a/templates/config-wb-mai2-cc-fw-4.32.json.jinja
+++ b/templates/config-wb-mai2-cc-fw-4.32.json.jinja
@@ -209,6 +209,18 @@
                 "group": "hw_info"
             },
             {
+                "id": "hw_batch_number",
+                "name": "HW Batch Number",
+                "type": "text",
+                "reg_type": "input",
+                "address": 304,
+                "format": "string",
+                "string_data_size": 16,
+                "fw": "4.33.0",
+                "enabled": false,
+                "group": "hw_info"
+            },
+            {
                 "id": "fw_version",
                 "name": "FW Version",
                 "reg_type": "input",
@@ -285,6 +297,7 @@
                 "minimum_value_title": "Нижняя граница диапазона",
                 "maximum_value_title": "Верхняя граница диапазона",
                 "Serial NO": "Серийный номер",
+                "HW Batch Number": "Номер партии",
                 "FW Version": "Версия прошивки",
                 "Input Voltage": "Напряжение питания",
                 "Minimum MCU Voltage Since Startup": "Минимальное напряжение питания МК с момента включения",
