--- a/templates/config-wb-mai6-fw-2.2.json.jinja
+++ b/templates/config-wb-mai6-fw-2.2.json.jinja
@@ -1165,6 +1165,17 @@
                 "group": "hw_info"
             },
             {
+                "name": "HW Batch Number",
+                "type": "text",
+                "reg_type": "input",
+                "address": 304,
+                "format": "string",
+                "string_data_size": 16,
+                "fw": "2.3.0",
+                "enabled": false,
+                "group": "hw_info"
+            },
+            {
                 "name": "FW Version",
                 "reg_type": "input",
                 "address": 250,
@@ -1402,6 +1413,7 @@
                 "5V Output": "Напряжение на клеммах 5V",
                 "Internal Temperature": "Температура внутри модуля",
                 "Serial": "Серийный номер",
+                "HW Batch Number": "Номер партии",
                 "FW Version": "Версия прошивки",
                 "Internal 5V Bus Voltage": "Напряжение внутренней шины 5В",
                 "Uptime": "Время работы с момента включения",
