--- a/templates/config-wb-ups-v3.json.jinja
+++ b/templates/config-wb-ups-v3.json.jinja
@@ -462,6 +462,18 @@
                 "group": "hw_info"
             },
             {
+                "id": "hw_batch_number",
+                "name": "HW Batch Number",
+                "type": "text",
+                "reg_type": "input",
+                "address": 304,
+                "format": "string",
+                "string_data_size": 16,
+                "fw": "1.3.0",
+                "enabled": false,
+                "group": "hw_info"
+            },
+            {
                 "id": "fw_version",
                 "name": "FW Version",
                 "reg_type": "input",
@@ -589,6 +601,7 @@
                 "Button Shortlong Press Counter": "Счетчик коротких, а затем длинных нажатий",
 
                 "Serial": "Серийный номер",
+                "HW Batch Number": "Номер партии",
                 "FW Version": "Версия прошивки",
                 "Uptime": "Время работы с момента включения",
                 "MCU Temperature": "Температура МК",
