--- a/templates/config-wb-ups-v3.json.jinja
+++ b/templates/config-wb-ups-v3.json.jinja
@@ -256,6 +256,7 @@
                 "name": "Battery Temperature",
                 "units": "deg C",
                 "scale": 0.01,
+                "format": "s16",
                 "reg_type": "input",
                 "address": 9,
                 "group": "gg_ups_channels"
