Update PLC-270 templates and translations

--- a/templates/config-oni-plc-270-ema-06u000-00-mr.json.jinja
+++ b/templates/config-oni-plc-270-ema-06u000-00-mr.json.jinja
@@ -1,9 +1,9 @@
-{% with title_en = "PLC-W-EMA-06U00 (6-channel analog input module)",
-        title_ru = "PLC-W-EMA-06U00 (6-канальный модуль аналоговых входов)",
-        device_type = "tpl1_oni_plc_w_ema_06U00",
+{% with title_en = "PLC-270-EMA-06U000-00-MR (PLC 270 IO Modbus RTU module 6 UI ONI)",
+        title_ru = "PLC-270-EMA-06U000-00-MR (ПЛК 270 Модуль IO Modbus RTU 6 UI ONI)",
+        device_type = "tpl1_oni_plc_270_ema_06u000_00_mr",
         group = "g-oni",
-        device_name = "PLC-W-EMA-06U00",
-        device_id = "oni-plc-w-ema-06u00",
+        device_name = "PLC-270-EMA-06U000-00-MR",
+        device_id = "oni-plc-270-ema-06u000-00-mr",
         has_signature = true %}
 {% include "config-wb-mai6.json.jinja" %}
 {% endwith %}
