--- a/templates/config-oni-plc-270-emc-mrl000-00-00.json.jinja
+++ b/templates/config-oni-plc-270-emc-mrl000-00-00.json.jinja
@@ -1,9 +1,9 @@
-{% with title_en = "PLC-W-ACS-MBRTU-WATER (water leak and meters controller)",
-        title_ru = "PLC-W-ACS-MBRTU-WATER (модуль контроля протечек и расхода воды)",
-        device_type = "tpl1_oni_plc_w_acs_mbrtu_water",
+{% with title_en = "PLC-270-EMC-MRL000-00-00 (PLC 270 Water consumption metering and leak monitoring module ONI)",
+        title_ru = "PLC-270-EMC-MRL000-00-00 (ПЛК 270 Модуль учета водопотребления и контроля протечек ONI)",
+        device_type = "tpl1_oni_plc_270_emc_mrl000_00_00",
         group = "g-oni",
-        device_name = "PLC-W-ACS-MBRTU-WATER",
-        device_id = "oni-plc-w-acs-mbrtu-water",
+        device_name = "PLC-270-EMC-MRL000-00-00",
+        device_id = "oni-plc-270-emc-mrl000-00-00",
         has_signature = true %}
 {% include "config-wb-mwac2.json.jinja" %}
 {% endwith %}
