--- a/templates/config-oni-plc-270-emd-00008o-00-io.json.jinja
+++ b/templates/config-oni-plc-270-emd-00008o-00-io.json.jinja
@@ -1,7 +1,8 @@
-{% with device_title = "PLC-W-EMD-0008",
-        device_type = "tpl1_oni_plc_w_emd_0008",
+{% with title_en = "PLC-270-EMD-00008O-00-IO (PLC 270 IO module 8 DO optorelay ONI)",
+        title_ru = "PLC-270-EMD-00008O-00-IO (ПЛК 270 Модуль IO 8 DO оптореле ONI)",
+        device_type = "tpl1_oni_plc_270_emd_00008o_00_io",
         group = "g-oni",
-        device_name = "PLC-W-EMD-0008",
-        device_id = "oni-plc-w-emd-0008" %}
+        device_name = "PLC-270-EMD-00008O-00-IO",
+        device_id = "oni-plc-270-emd-00008o-00-io" %}
 {% include "config-wbio-do-ssr-8.json.jinja" %}
 {% endwith %}
