--- a/templates/config-oni-plc-270-emd-00008r-00-io.json.jinja
+++ b/templates/config-oni-plc-270-emd-00008r-00-io.json.jinja
@@ -1,7 +1,8 @@
-{% with device_title = "PLC-W-EMD-0008R",
-        device_type = "tpl1_oni_plc_w_emd_0008r",
+{% with title_en = "PLC-270-EMD-00008R-00-IO (PLC 270 IO module 8 RO ONI)",
+        title_ru = "PLC-270-EMD-00008R-00-IO (ПЛК 270 Модуль IO 8 RO ONI)",
+        device_type = "tpl1_oni_plc_270_emd_00008r_00_io",
         group = "g-oni",
-        device_name = "PLC-W-EMD-0008R",
-        device_id = "oni-plc-w-emd-0008r" %}
+        device_name = "PLC-270-EMD-00008R-00-IO",
+        device_id = "oni-plc-270-emd-00008r-00-io" %}
 {% include "config-wbio-do-r10a-8.json.jinja" %}
 {% endwith %}
