--- a/templates/config-oni-plc-270-emd-00016r-00-io.json.jinja
+++ b/templates/config-oni-plc-270-emd-00016r-00-io.json.jinja
@@ -1,7 +1,8 @@
-{% with device_title = "PLC-W-EMD-0016R",
-        device_type = "tpl1_oni_plc_w_emd_0016r",
+{% with title_en = "PLC-270-EMD-00016R-00-IO (PLC 270 IO module 16 RO ONI)",
+        title_ru = "PLC-270-EMD-00016R-00-IO (ПЛК 270 Модуль IO 16 RO ONI)",
+        device_type = "tpl1_oni_plc_270_emd_00016r_00_io",
         group = "g-oni",
-        device_name = "PLC-W-EMD-0016R",
-        device_id = "oni-plc-w-emd-0016r" %}
+        device_name = "PLC-270-EMD-00016R-00-IO",
+        device_id = "oni-plc-270-emd-00016r-00-io" %}
 {% include "config-wbio-do-r1g-16.json.jinja" %}
 {% endwith %}
