--- a/templates/config-oni-plc-270-emd-02d02r-00-mr-nc.json.jinja
+++ b/templates/config-oni-plc-270-emd-02d02r-00-mr-nc.json.jinja
@@ -1,8 +1,8 @@
-{% with title_en = "PLC-W-EMD-0202-80A/NC (2-channel relay)",
-        title_ru = "PLC-W-EMD-0202-80A/NC (2-канальный модуль реле)",
-        device_type = "tpl1_oni_plc_w_emd_0202_80a_nc",
+{% with title_en = "PLC-270-EMD-02D02R-00-MR/NC (PLC 270 Compact IO Modbus RTU module 2 DI 2 RO ONI)",
+        title_ru = "PLC-270-EMD-02D02R-00-MR/NC (ПЛК 270 Модуль компактный IO Modbus RTU 2 DI 2 RO ONI)",
+        device_type = "tpl1_oni_plc_270_emd_02d02r_00_mr_nc",
         group = "g-oni",
-        device_name = "PLC-W-EMD-0202-80A/NC",
-        device_id = "oni-plc-w-emd-0202-80a-nc" %}
+        device_name = "PLC-270-EMD-02D02R-00-MR/NC",
+        device_id = "oni-plc-270-emd-02d02r-00-mr-nc" %}
 {% include "config-wb-mrm2-mini-nc.json.jinja" %}
 {% endwith %}
