--- a/templates/config-oni-plc-270-emd-04d03r-00-mr.json.jinja
+++ b/templates/config-oni-plc-270-emd-04d03r-00-mr.json.jinja
@@ -1,9 +1,9 @@
-{% with title_en = "PLC-W-EMD-0403-120A, PLC-W-EMD-0403-165A, PLC-W-EMD-0403-31A  (3-channel relay)",
-        title_ru = "PLC-W-EMD-0403-120A, PLC-W-EMD-0403-165A, PLC-W-EMD-0403-31A  (3-канальный модуль реле)",
-        device_type = "tpl1_oni_plc_w_emd_0403",
+{% with title_en = "PLC-270-EMD-04D03R-60-MR, PLC-270-EMD-04D03S-40-MR, PLC-270-EMD-04D03R-00-MR (PLC 270 IO Modbus RTU module 4 DI 3 RO 165A/120A/31A ONI)",
+        title_ru = "PLC-270-EMD-04D03R-60-MR, PLC-270-EMD-04D03S-40-MR, PLC-270-EMD-04D03R-00-MR (ПЛК 270 Модуль IO Modbus RTU 4 DI 3 RO 165А/120А/31А ONI)",
+        device_type = "tpl1_oni_plc_270_emd_04d03r_00_mr",
         group = "g-oni",
-        device_name = "PLC-W-EMD-0403",
-        device_id = "oni-plc-w-emd-0403",
+        device_name = "PLC-270-EMD-04D03R-00-MR",
+        device_id = "oni-plc-270-emd-04d03r-00-mr",
         has_signature = true %}
 {% include "config-wb-mr3.json.jinja" %}
 {% endwith %}
