--- a/templates/config-oni-plc-270-emd-07d06r-2p-mr.json.jinja
+++ b/templates/config-oni-plc-270-emd-07d06r-2p-mr.json.jinja
@@ -1,9 +1,9 @@
-{% with title_en = "PLC-W-EMD-0706-POWER (6-channel relay with internal power supply)",
-        title_ru = "PLC-W-EMD-0706-POWER (6-канальный модуль реле с внутренним блоком питания)",
-        device_type = "tpl1_oni_plc_w_emd_0706_power",
+{% with title_en = "PLC-270-EMD-07D06R-2P-MR (PLC 270 IO Modbus RTU module 7 DI 6 RO 80A with power supply ONI)",
+        title_ru = "PLC-270-EMD-07D06R-2P-MR (ПЛК 270 Модуль IO Modbus RTU 7 DI 6 RO 80А с питанием ONI)",
+        device_type = "tpl1_oni_plc_270_emd_07d06r_2p_mr",
         group = "g-oni",
-        device_name = "PLC-W-EMD-0706-POWER",
-        device_id = "oni-plc-w-emd-0706-power",
+        device_name = "PLC-270-EMD-07D06R-2P-MR",
+        device_id = "oni-plc-270-emd-07d06r-2p-mr",
         has_signature = true %}
 {% include "config-wb-mr6cv3.json.jinja" %}
 {% endwith %}
