--- a/templates/config-oni-plc-270-emd-08d000-00-mr.json.jinja
+++ b/templates/config-oni-plc-270-emd-08d000-00-mr.json.jinja
@@ -1,9 +1,9 @@
-{% with title_en = "PLC-W-ACS-0800-IMP (8-channel pulse counter)",
-        title_ru = "PLC-W-ACS-0800-IMP (8-канальный модуль счетных входов)",
-        device_type = "tpl1_oni_plc_w_acs_0800_imp",
+{% with title_en = "PLC-270-EMD-08D000-00-MR (PLC 270 IO Modbus RTU module 8 DI ONI)",
+        title_ru = "PLC-270-EMD-08D000-00-MR (ПЛК 270 Модуль IO Modbus RTU 8 DI ONI)",
+        device_type = "tpl1_oni_plc_270_emd_08d000_00_mr",
         group = "g-oni",
-        device_name = "PLC-W-ACS-0800-IMP",
-        device_id = "oni-plc-w-acs-0800-imp",
+        device_name = "PLC-270-EMD-08D000-00-MR",
+        device_id = "oni-plc-270-emd-08d000-00-mr",
         has_signature = true %}
 {% include "config-wb-mcm8.json.jinja" %}
 {% endwith %}
