--- a/templates/config-oni-plc-270-emd-08l000-00-io.json.jinja
+++ b/templates/config-oni-plc-270-emd-08l000-00-io.json.jinja
@@ -1,7 +1,8 @@
-{% with device_title = "PLC-W-EMD-0800",
-        device_type = "tpl1_oni_plc_w_emd_0800",
+{% with title_en = "PLC-270-EMD-08L000-00-IO (PLC 270 IO module 8 DI active 230V ONI)",
+        title_ru = "PLC-270-EMD-08L000-00-IO (ПЛК 270 Модуль IO 8 DI активный 230В ONI)",
+        device_type = "tpl1_oni_plc_270_emd_08l000_00_io",
         group = "g-oni",
-        device_name = "PLC-W-EMD-0800",
-        device_id = "oni-plc-w-emd-0800" %}
+        device_name = "PLC-270-EMD-08L000-00-IO",
+        device_id = "oni-plc-270-emd-08l000-00-io" %}
 {% include "config-wbio-di-hvd-8.json.jinja" %}
 {% endwith %}
