--- a/templates/config-oni-plc-270-emi-ir0000-00-00.json.jinja
+++ b/templates/config-oni-plc-270-emi-ir0000-00-00.json.jinja
@@ -1,9 +1,9 @@
-{% with title_en = "PLC-W-ACS-MBRTU-IR (Modbus IR remote control)",
-        title_ru = "PLC-W-ACS-MBRTU-IR (Modbus-модуль ИК-управления)",
-        device_type = "tpl1_oni_plc_w_acs_mbrtu_ir",
+{% with title_en = "PLC-270-EMI-IR0000-00-00 (PLC 270 Compact Modbus RTU IR control module ONI)",
+        title_ru = "PLC-270-EMI-IR0000-00-00 (ПЛК 270 Модуль компактный Modbus RTU ИК-управление ONI)",
+        device_type = "tpl1_oni_plc_270_emi_ir0000_00_00",
         group = "g-oni",
-        device_name = "PLC-W-ACS-MBRTU-IR",
-        device_id = "oni-plc-w-acs-mbrtu-ir",
+        device_name = "PLC-270-EMI-IR0000-00-00",
+        device_id = "oni-plc-270-emi-ir0000-00-00",
         has_signature = true %}
 {% include "config-wb-mir_v2.json.jinja" %}
 {% endwith %}
