--- a/templates/config-oni-plc-270-ema-02u000-00-mr.json.jinja
+++ b/templates/config-oni-plc-270-ema-02u000-00-mr.json.jinja
@@ -1,9 +1,9 @@
-{% with title_en = "PLC-W-EMA-0200 (2-channel analog input module)",
-        title_ru = "PLC-W-EMA-0200 (2-канальный модуль измерения токового сигнала)",
-        device_type = "tpl1_oni_plc_w_ema_0200",
+{% with title_en = "PLC-270-EMA-02U000-00-MR (PLC 270 Compact IO Modbus RTU module 2 AI ONI)",
+        title_ru = "PLC-270-EMA-02U000-00-MR (ПЛК 270 Модуль компактный IO Modbus RTU 2 AI ONI)",
+        device_type = "tpl1_oni_plc_270_ema_02u000_00_mr",
         group = "g-oni",
-        device_name = "PLC-W-EMA-0200",
-        device_id = "oni-plc-w-ema-0200",
+        device_name = "PLC-270-EMA-02U000-00-MR",
+        device_id = "oni-plc-270-ema-02u000-00-mr",
         has_signature = true %}
 {% include "config-wb-mai2-cc.json.jinja" %}
 {% endwith %}
