--- a/templates/config-oni-plc-270-emd-07d06r-20-mr.json.jinja
+++ b/templates/config-oni-plc-270-emd-07d06r-20-mr.json.jinja
@@ -1,9 +1,9 @@
-{% with title_en = "PLC-W-EMD-0706 (6-channel relay)",
-        title_ru = "PLC-W-EMD-0706 (6-канальный модуль реле)",
-        device_type = "tpl1_oni_plc_w_emd_0706",
+{% with title_en = "PLC-270-EMD-07D06R-20-MR (PLC 270 IO Modbus RTU module 7 DI 6 RO 80A ONI)",
+        title_ru = "PLC-270-EMD-07D06R-20-MR (ПЛК 270 Модуль IO Modbus RTU 7 DI 6 RO 80А ONI)",
+        device_type = "tpl1_oni_plc_270_emd_07d06r_20_mr",
         group = "g-oni",
-        device_name = "PLC-W-EMD-0706",
-        device_id = "oni-plc-w-emd-0706",
+        device_name = "PLC-270-EMD-07D06R-20-MR",
+        device_id = "oni-plc-270-emd-07d06r-20-mr",
         has_signature = true %}
 {% include "config-wb-mr6c.json.jinja" %}
 {% endwith %}
