--- a/templates/config-oni-plc-270-emd-14d000-00-io.json.jinja
+++ b/templates/config-oni-plc-270-emd-14d000-00-io.json.jinja
@@ -1,7 +1,8 @@
-{% with device_title = "PLC-W-EMD-1400",
-        device_type = "tpl1_oni_plc_w_emd_1400",
+{% with title_en = "PLC-270-EMD-14D000-00-IO (PLC 270 IO module 14 DI ONI)",
+        title_ru = "PLC-270-EMD-14D000-00-IO (ПЛК 270 Модуль IO 14 DI ONI)",
+        device_type = "tpl1_oni_plc_270_emd_14d000_00_io",
         group = "g-oni",
-        device_name = "PLC-W-EMD-1400",
-        device_id = "oni-plc-w-emd-1400" %}
+        device_name = "PLC-270-EMD-14D000-00-IO",
+        device_id = "oni-plc-270-emd-14d000-00-io" %}
 {% include "config-wbio-di-wd-14.json.jinja" %}
 {% endwith %}
