--- a/templates/config-oni-plc-270-emm-02d02r-00-mr.json.jinja
+++ b/templates/config-oni-plc-270-emm-02d02r-00-mr.json.jinja
@@ -1,9 +1,9 @@
-{% with title_en = "PLC-W-EMD-0202-ACT (2-channel power metering relay)",
-        title_ru = "PLC-W-EMD-0202-ACT (2-канальный модуль реле с измерением мощности)",
-        device_type = "tpl1_oni_plc_w_emd_0202_act",
+{% with title_en = "PLC-270-EMM-02D02R-00-MR (PLC 270 Measuring Modbus RTU module 2 DI 2 RO ONI)",
+        title_ru = "PLC-270-EMM-02D02R-00-MR (ПЛК 270 Модуль измерительный Modbus RTU 2 DI 2 RO ONI)",
+        device_type = "tpl1_oni_plc_270_emm_02d02r_00_mr",
         group = "g-oni",
-        device_name = "PLC-W-EMD-0202-ACT",
-        device_id = "oni-plc-w-emd-0202-act",
+        device_name = "PLC-270-EMM-02D02R-00-MR",
+        device_id = "oni-plc-270-emm-02d02r-00-mr",
         has_signature = true %}
 {% include "config-wb-mrwm2.json.jinja" %}
 {% endwith %}
