--- a/templates/config-wbio-di-wd-14.json.jinja
+++ b/templates/config-wbio-di-wd-14.json.jinja
@@ -1,11 +1,13 @@
 {% set device_title = device_title | default("WBIO-DI-WD-14") -%}
+{% set title_en = title_en | default(device_title) -%}
+{% set title_ru = title_ru | default(device_title) -%}
 {% set device_type = device_type | default("WBIO-DI-WD-14") -%}
 {% set group = group | default("g-wb") -%}
 {% set device_name = device_name | default("WBIO-DI-WD-14") -%}
 {% set device_id = device_id | default("wb-mio-gpio") -%}
 
 {
-    "title": "{{ device_title }}",
+    "title": "template_title",
     "device_type": "{{ device_type }}",
     "group": "{{ group }}",
     "device": {
@@ -252,7 +254,11 @@
             }
         ],
         "translations": {
+            "en": {
+                "template_title": "{{ title_en }}"
+            },
             "ru": {
+                "template_title": "{{ title_ru }}",
                 "Counter 1": "Счетчик 1",
                 "Counter 2": "Счетчик 2",
                 "Counter 3": "Счетчик 3",
