--- a/templates/config-wbio-do-r10a-8.json.jinja
+++ b/templates/config-wbio-do-r10a-8.json.jinja
@@ -1,11 +1,13 @@
 {% set device_title = device_title | default("WBIO-DO-R10A-8") -%}
+{% set title_en = title_en | default(device_title) -%}
+{% set title_ru = title_ru | default(device_title) -%}
 {% set device_type = device_type | default("WBIO-DO-R10A-8") -%}
 {% set group = group | default("g-wb") -%}
 {% set device_name = device_name | default("WBIO-DO-R10A-8") -%}
 {% set device_id = device_id | default("wb-mio-gpio") -%}
 
 {
-    "title": "{{ device_title }}",
+    "title": "template_title",
     "device_type": "{{ device_type }}",
     "group": "{{ group }}",
     "device": {
@@ -103,6 +105,14 @@
                 "address": 7,
                 "type": "switch"
             }
-        ]
+        ],
+        "translations": {
+            "en": {
+                "template_title": "{{ title_en }}"
+            },
+            "ru": {
+                "template_title": "{{ title_ru }}"
+            }
+        }
     }
 }
